<resources>
    <string name="app_name">Editor</string>
    <string name="title_activity_editor">Editor</string>

    <string name="content_desc_photo_preview">Image preview</string>
    <string name="content_desc_camera">Capture photo</string>
    <string name="content_desc_gallery">Pick from gallery</string>

    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="action_rotate">Rotate</string>
    <string name="action_crop">Crop</string>
    <string name="action_done">Done</string>
    <string name="action_close">Close</string>

    <string name="msg_not_capture">Sorry, something went wrong.</string>

</resources>