<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/action_undo"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/mi_crop"
        android:icon="@drawable/ic_crop"
        android:title="@string/action_crop"
        app:showAsAction="always" />

    <item
        android:id="@+id/mi_rotate"
        android:icon="@drawable/ic_rotate_right"
        android:title="@string/action_rotate"
        app:showAsAction="always" />

    <item
        android:id="@+id/mi_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="always" />

</menu>